# nextjs-fastapi-postgres-demo

backend/: main.py  models.py  pyproject.toml  seed.py
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/components/: AppHeader.tsx  ChatHistoryButton.tsx  ChatThreadComponent.tsx  CreateThreadButton.tsx  MessageBubbleList.tsx  NewThreadButton.tsx  ViewThreadButton.tsx
frontend/app/thread-conversation/[id]/: page.tsx
frontend/app/thread-history/: page.tsx
